--- a/form-exercise1(one).html
+++ b/form-exercise1(one).html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>2020 Proposal Form - Accessible Version</title>
 <!-- Link to the CSS file. Make sure the path matches the actual location -->
-<link rel="stylesheet" href="css/form.css" />  
+<link rel="stylesheet" href="form.css" />  
 
 <!-- Allow HTML5 to run in older versions of IE -->   
 <!--[if lt IE 9]>
